---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string#/collections/testing~1int-string/key/1,
        error: location /unknown/key is unknown in schema test://example/int-string.schema,
    },
    Error {
        scope: test://example/int-string#/collections/testing~1int-string/projections/Unknown,
        error: location /unknown/projection is unknown in schema test://example/int-string.schema,
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derive/transforms/0/shuffle/key/2,
        error: location /unknown/shuffle is prohibited from ever existing by the schema test://example/canonical/int-string-len.schema,
    },
    Error {
        scope: test://example/db-views#/materializations/testing~1db-views/bindings/0,
        error: field selection conflict for field 'unknown/key': selected (GroupByKey) but rejected (ConnectorOmits),
    },
]
